--- a/package.json
+++ b/package.json
@@ -28,5 +28,11 @@
   "lint-staged": "^12.3.5",
   "ts-jest": "^27.1.3",
   "typescript": "^4.6.2"
- }
+	},
+	"lint-staged": {
+		"*.ts": [
+			"eslint . --ext .ts",
+			"yarn test:staged"
+		]
+	}
 }
