ci: configuring ci action

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
   "compilerOptions": {
+		"outDir": "dist",
     "target": "ESNext",
     "module": "commonjs",
     "esModuleInterop": true,
+		"rootDirs": ["src", "tests"],
     "forceConsistentCasingInFileNames": true,
     "strict": true,
     "skipLibCheck": true,
 		"experimentalDecorators": true,
 		"strictPropertyInitialization": false
-  }
+  },
+	"include": ["src"]
 }
