--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "test:unit": "yarn test --watch",
   "test:staged": "yarn test",
   "test:ci": "yarn test --coverage",
+  "build:prod": "rimraf dist && tsc",
   "prepare": "husky install",
   "postinstall": "husky install"
  },
@@ -26,13 +27,14 @@
   "husky": "^7.0.4",
   "jest": "^27.5.1",
   "lint-staged": "^12.3.5",
+  "rimraf": "^3.0.2",
   "ts-jest": "^27.1.3",
   "typescript": "^4.6.2"
-	},
-	"lint-staged": {
-		"*.ts": [
-			"eslint . --ext .ts",
-			"yarn test:staged"
-		]
-	}
+ },
+ "lint-staged": {
+  "*.ts": [
+   "eslint . --ext .ts",
+   "yarn test:staged"
+  ]
+ }
 }
